<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_begin_date"
        android:id="@+id/begin_date_text_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />
    <DatePicker
        android:id="@+id/begin_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintStart_toStartOf="@+id/begin_date_text_form"
        app:layout_constraintTop_toBottomOf="@+id/begin_date_text_form" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_begin_time"
        android:id="@+id/begin_time_text_form"
        app:layout_constraintStart_toStartOf="@+id/begin_date_picker"
        app:layout_constraintTop_toBottomOf="@+id/begin_date_picker" />
    <TimePicker
        android:id="@+id/begin_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintStart_toStartOf="@+id/begin_time_text_form"
        app:layout_constraintTop_toBottomOf="@+id/begin_time_text_form" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_end_date"
        android:id="@+id/end_date_text_form"
        app:layout_constraintStart_toStartOf="@+id/begin_time_picker"
        app:layout_constraintTop_toBottomOf="@+id/begin_time_picker"  />
    <DatePicker
        android:id="@+id/end_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintStart_toStartOf="@+id/end_date_text_form"
        app:layout_constraintTop_toBottomOf="@+id/end_date_text_form"  />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_end_time"
        android:id="@+id/end_time_text_form"
        app:layout_constraintStart_toStartOf="@+id/end_date_picker"
        app:layout_constraintTop_toBottomOf="@+id/end_date_picker" />
    <TimePicker
        android:id="@+id/end_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintStart_toStartOf="@+id/begin_time_text_form"
        app:layout_constraintTop_toBottomOf="@+id/end_time_text_form" />
</androidx.constraintlayout.widget.ConstraintLayout>