...
            android:textColor="@color/orange"
            android:textSize="50sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/plannify_title"
            app:layout_constraintTop_toBottomOf="@+id/plannify_title" />

...
            android:name="cyril.brian.vacationmobile.ui.components.PeriodPickerFragment"
            tools:layout="@layout/fragment_period_picker"
            app:layout_constraintStart_toStartOf="@+id/error_message"
            app:layout_constraintTop_toBottomOf="@+id/error_message"  />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm_txt_btn"
            app:layout_constraintStart_toStartOf="@+id/period_picker"
            app:layout_constraintTop_toBottomOf="@+id/period_picker" />
...
